# Orion-Spectator-Package-Manager

./: README.md  pyproject.toml
example-package-output/: example-package.luau
example-package-output/example-package/: package.json
src/ospm/: __init__.py  main.py
src/ospm/callbacks/: __init__.py  version.py
src/ospm/commands/: __init__.py  check.py  docs.py  download.py  freeze.py  goto.py  init.py  install.py  list.py  lock.py  package.py  show.py  uninstall.py  update.py
src/ospm/gui/: gui.py
src/ospm/utils/: change_path.py  easy_print.py  generate_version.py  package_types.py
